Stylesheet/emote/tag updates 2013-02-21

--- a/source-css/arborus.css
+++ b/source-css/arborus.css
@@ -347,7 +347,7 @@ a[href|="/qcgala"] {
     height: 300px;
     background-image: url(%%qcgala%%) }
 
-a[href|="/areyoufuckingkiddingme"], a[href|="/creepypie"], a[href|="/itspartytime"], a[href|="/scratchout"], a[href|="/lyredrink"], a[href|="/chakolatechip"], a[href|="/babbychris"], a[href|="/blueshiftsealofapproval"], a[href|="/xmasscratch"] {
+a[href|="/areyoufuckingkiddingme"], a[href|="/creepypie"], a[href|="/itspartytime"], a[href|="/scratchout"], a[href|="/lyredrink"], a[href|="/chakolatechip"], a[href|="/babbychris"], a[href|="/blueshiftsealofapproval"], a[href|="/xmasscratch"], a[href|="/itmademefeellikeapieceofshit"]  {
     display: block;
     clear: none;
     float: left;
@@ -392,17 +392,21 @@ a[href|="/xmasscratch"] {
     background-position: -800px -200px
     }
 
+a[href|="/itmademefeellikeapieceofshit"] {
+    background-position: -0px -400px
+    }
 
-a[href|="/qcmeme"], a[href|="/somuchlove"], a[href|="/doeshelooklikeabitch"], a[href|="/st3rox"], a[href|="/madmeansealofapproval"], a[href|="/tentenwouldmarmshat"] {
+
+a[href|="/qcmeme"], a[href|="/somuchlove"], a[href|="/doeshelooklikeabitch"], a[href|="/st3rox"], a[href|="/madmeansealofapproval"], a[href|="/tentenwouldmarmshat"], a[href|="/bwainobowdash"], a[href|="/fuckyeahmurica"], a[href|="/queenrawr"], a[href|="/wellikillpeopleandeathandsthatstwothings"]{
  display: block;
     clear: none;
     float: left;
     width: 200px;
     height: 200px;
-    background-image: url(%%emotesheet3%%) }
+    background-image: url(%%emotesheet33%%) }
 
 a[href|="/qcmeme"] {
-    background-position: 0px 0px
+    background-position: -0px -0px
     }
 
 a[href|="/somuchlove"] {
@@ -423,6 +427,22 @@ a[href|="/madmeansealofapproval"] {
 
 a[href|="/tentenwouldmarmshat"] {
     background-position: -0px -200px
+    }
+
+a[href|="/bwainobowdash"] {
+    background-position: -200px -400px
+    }
+
+a[href|="/fuckyeahmurica"] {
+    background-position: -0px -400px
+    }
+
+a[href|="/queenrawr"] {
+    background-position: -200px -400px
+    }
+
+a[href|="/wellikillpeopleandeathandsthatstwothings"] {
+    background-position: -400px -400px
     }
 
 a[href|="/ohmy"] {
@@ -456,4 +476,3 @@ a[href|="/geneticallymodifiedsalamanderwithafacejustlikegeorgeclooney"] {
     width: 150px;
     height: 148px;
     background-image: url(%%Salamander%%) }
-
