--- a/source-css/mylittlealicorn.css
+++ b/source-css/mylittlealicorn.css
@@ -7,7 +7,7 @@ a[href="/generictwilicorn"], a[href="/princesstwi"], a[href="/princesstwi2"], a[
     height: 140px!important;
     background-image:url(%%emotesheet%%);
 }
-a[href="/wavingtwilicorn"], a[href="/bashfultwilicorn"], a[href="/twilicornsmile"], a[href="/twilicornmagic"], a[href="/confusedtwilicorn"] {
+a[href="/wavingtwilicorn"], a[href="/bashfultwilicorn"], a[href="/twilicornsmile"], a[href="/twilicornmagic"], a[href="/confusedtwilicorn"], a[href="/acceptingtwilicorn"], a[href="/raricorn"] {
     display: block;
     clear: none;
     float: left;
@@ -26,10 +26,10 @@ a[href="/generictwilicorn"] { background-position: 0 980px; }
 a[href="/princesstwi2"] { background-position: 140px 980px; }
 a[href="/princesstwi"] { background-position: 0 840px; }
 a[href="/stellartwilicorn"] { background-position: 140px 840px; }
-a[href="/octaviacorn"] { background-position: 0 700px; }
+a[href="/octaviacorn"], a[href="/raricorn"] { background-position: 0 700px; }
 a[href="/princesspp"] { background-position: 140px 700px; }
 a[href="/princessrbd"], a[href="/confusedtwilicorn"] { background-position:0 560px; }
-a[href="/princessrarity"] { background-position:140px 560px; }
+a[href="/princessrarity"], a[href="/acceptingtwilicorn"] { background-position:140px 560px; }
 a[href="/princessaj"], a[href="/twilicornsmile"] { background-position:0 420px; }
 a[href="/princessfs"], a[href="/twilicornmagic"] { background-position:140px 420px; }
 a[href="/scootacorn"], a[href="/wavingtwilicorn"] { background-position:0 280px; }
@@ -44,7 +44,7 @@ a[href="/sgenerictwilicorn"], a[href="/sprincesstwi"], a[href="/sprincesstwi2"],
     height: 70px!important;
     background-image:url(%%emotesheetsmall%%);
 }
-a[href="/swavingtwilicorn"], a[href="/sbashfultwilicorn"], a[href="/stwilicornsmile"], a[href="/stwilicornmagic"], a[href="/sconfusedtwilicorn"] {
+a[href="/swavingtwilicorn"], a[href="/sbashfultwilicorn"], a[href="/stwilicornsmile"], a[href="/stwilicornmagic"], a[href="/sconfusedtwilicorn"], a[href="/sacceptingtwilicorn"], a[href="/sraricorn"] {
     display: block;
     clear: none;
     float: left;
@@ -62,10 +62,10 @@ a[href="/sgenerictwilicorn"] { background-position: 0 490px; }
 a[href="/sprincesstwi2"] { background-position: 70px 490px; }
 a[href="/sprincesstwi"] { background-position: 0 420px; }
 a[href="/sstellartwilicorn"] { background-position: 70px 420px; }
-a[href="/soctaviacorn"] { background-position: 0 350px; }
+a[href="/soctaviacorn"], a[href="/sraricorn"] { background-position: 0 350px; }
 a[href="/sprincesspp"] { background-position: 70px 350px; }
 a[href="/sprincessrbd"], a[href="/sconfusedtwilicorn"] { background-position:0 280px; }
-a[href="/sprincessrarity"] { background-position:70px 280px; }
+a[href="/sprincessrarity"], a[href="/sacceptingtwilicorn"] { background-position:70px 280px; }
 a[href="/sprincessaj"], a[href="/stwilicornsmile"] { background-position:0 210px; }
 a[href="/sprincessfs"], a[href="/stwilicornmagic"] { background-position:70px 210px; }
 a[href="/sscootacorn"], a[href="/swavingtwilicorn"] { background-position:0 140px; }
