--- a/source-css/berrytubelounge.css
+++ b/source-css/berrytubelounge.css
@@ -10,6 +10,7 @@ unicode-bidi: bidi-override;
 text-align: left;
 }
 
+
 #header-bottom-left:nth-of-type(n) {
    background: url(%%banner%%); 
    background-repeat: no-repeat;
@@ -140,6 +141,15 @@ color: #FFF !important
 /*********Emotes*******/
 /**********************/
 
+a[href|="/pony"]{
+display:block;
+clear: none;
+float: left;
+width: 396px;
+height: 320px;
+background-image: url(%%sJkxTU7%%) !important
+}
+
 a[href|="/btl00"], a[href|="/btl10"], a[href|="/btl01"], a[href|="/btl11"], a[href|="/btl02"], a[href|="/btl12"], a[href|="/btl03"], a[href|="/btl13"], a[href|="/halp"], a[href|="/onekeg"], a[href|="/scootafresh"], a[href|="/spikedapper"], a[href|="/beepbeep"], a[href|="/vinyldance"], a[href|="/octysmile"], a[href|="/octygrin"] {
 display:block;
 clear: none;
@@ -176,7 +186,7 @@ height: 140px;
 background-image: url(%%btlemotetable2%%) !important
 }
 
-a[href|="/bptuba"], a[href|="/miggyb"], a[href|="/crystalmuffins"], a[href|="/omnomtom"], a[href|="/jeb"] {
+a[href|="/bptuba"], a[href|="/crystalmuffins"], a[href|="/miggyb"], a[href|="/omnomtom"], a[href|="/jeb"] {
 display:block;
 clear: none;
 float: left;
@@ -238,6 +248,44 @@ width: 210px;
 height: 140px;
 background-image: url(%%btlemotetable4%%) !important
 }
+
+a[href|="/twijusthadsex"], a[href|="/shiteatinggrin"], a[href|="/egghead"], a[href|="/sehro"], a[href|="/kazoo"], a[href|="/cadanceheart"], a[href|="/berrytuber"], a[href|="/amgic"] {
+display:block;
+clear: none;
+float: left;
+width: 70px;
+height: 70px;
+background-image: url(%%btlemotetable5%%) !important
+}
+
+a[href|="/raincloud"] {
+display:block;
+clear: none;
+float: left;
+width: 140px;
+height: 70px;
+background-image: url(%%btlemotetable5%%) !important
+}
+
+a[href|="/trixdrunk"], a[href|="/itbegins"], a[href|="/thedrinkening"], a[href|="/heavybedroomeyes"] {
+display:block;
+clear: none;
+float: left;
+width: 140px;
+height: 140px;
+background-image: url(%%btlemotetable5%%) !important
+}
+
+a[href|="/disalot"], a[href|="/murcasalute"], a[href|="/coloncannon"], a[href|="/alotofdiscord"]{
+display:block;
+clear: none;
+float: left;
+width: 210px;
+height: 140px;
+background-image: url(%%btlemotetable5%%) !important
+}
+
+/*********Animotes begin here*******/
 
 a[href|="/octydance"]{
 display:block;
@@ -527,7 +575,7 @@ height: 140px;
 background-image: url(%%spikesad%%) !important
 }
 
-a[href|="/gummytreadmill"]{
+a[href|="/tldr"], a[href|="/gummytreadmill"]{
 display:block;
 clear: none;
 float: left;
@@ -544,7 +592,14 @@ width: 140px;
 height: 140px;
 background-image: url(%%trixchargin%%) !important
 }
-
+a[href|="/princessgummy"], a[href|="/imustgo"]{
+display:block;
+clear: none;
+float: left;
+width: 187px;
+height: 140px;
+background-image: url(%%princessgummy%%) !important
+}
 
 /* Added by Cades because lol */
 
@@ -564,24 +619,29 @@ width: 150px;
 height: 125px;
 background-image: url(%%itsreal%%) !important
 }
+a[href|="/pfudon"], a[href|="/pinkfluffyunicornsdancingonrainbows"], a[href|="/pinkfluffyunicorndancingonrainbows"]{
+display:block;
+clear: none;
+float: left;
+width: 150px;
+height: 110px;
+background-image: url(%%pinkfluffy%%) !important
+}
 
 /* End Cades' Edits */
 
 
 /* Sheet offsets */
-a[href|="/btl00"], a[href|="/halp"] {
-background-position: -0px -0px
-}
 
-a[href|="/btl10"], a[href|="/onekeg"], a[href|="/blt10"], a[href|="/ppmoonwalk"], a[href|="/miggyb"], a[href|="/crystalmuffins"], a[href|="/bpfight"] {
+a[href|="/btl10"], a[href|="/onekeg"], a[href|="/blt10"], a[href|="/ppmoonwalk"], a[href|="/crystalmuffins"], a[href|="/miggyb"], a[href|="/bpfight"], a[href|="/shiteatinggrin"] {
 background-position: -70px -0px
 }
 
-a[href|="/blt20"], a[href|="/ppbloat"], a[href|="/jebkerman"] , a[href|="/bpiv"]{
+a[href|="/blt20"], a[href|="/ppbloat"], a[href|="/jebkerman"] , a[href|="/bpiv"], a[href|="/trixdrunk"]{
 background-position: -140px -0px
 }
 
-a[href|="/btl01"], a[href|="/scootafresh"], a[href|="/blt01"], a[href|="/pprumgone"], a[href|="/wubjection"], a[href|="/astronomicalwanker"] {
+a[href|="/btl01"], a[href|="/scootafresh"], a[href|="/blt01"], a[href|="/pprumgone"], a[href|="/wubjection"], a[href|="/astronomicalwanker"], a[href|="/raincloud"] {
 background-position: -0px -70px
 }
 
@@ -593,11 +653,11 @@ a[href|="/ranboshad"] {
 background-position: -140px -70px
 }
 
-a[href|="/btl02"], a[href|="/beepbeep"], a[href|="/blt02"], a[href|="/ppfingers"], a[href|="/omnomtom"], a[href|="/sweetiewubs"] {
+a[href|="/btl02"], a[href|="/beepbeep"], a[href|="/blt02"], a[href|="/ppfingers"], a[href|="/omnomtom"], a[href|="/sweetiewubs"], a[href|="/egghead"] {
 background-position: -0px -140px
 }
 
-a[href|="/btl12"], a[href|="/vinyldance"], a[href|="/crystaldiva"], a[href|="/lyrahalp"] {
+a[href|="/btl12"], a[href|="/vinyldance"], a[href|="/crystaldiva"], a[href|="/lyrahalp"], a[href|="/murcasalute"] {
 background-position: -70px -140px
 }
 
@@ -605,7 +665,7 @@ a[href|="/blt22"], a[href|="/vodka"], a[href|="/wodka"], a[href|="/WODKA"], a[hr
 background-position: -140px -140px
 }
 
-a[href|="/btl03"], a[href|="/octysmile"], a[href|="/jeb"], a[href|="/greatscott"] {
+a[href|="/btl03"], a[href|="/octysmile"], a[href|="/jeb"], a[href|="/greatscott"], a[href|="/sehro"] {
 background-position: -0px -210px
 }
 
@@ -613,11 +673,11 @@ a[href|="/btl13"], a[href|="/octygrin"] {
 background-position: -70px -210px
 }
 
-a[href|="/btl04"], a[href|="/octav3drag"], a[href|="/blt04"], a[href|="/berryapproved"], a[href|="/bpapproves"], a[href|="/daftworth"], a[href|="/longlines"] {
+a[href|="/btl04"], a[href|="/octav3drag"], a[href|="/blt04"], a[href|="/berryapproved"], a[href|="/bpapproves"], a[href|="/daftworth"], a[href|="/longlines"], a[href|="/kazoo"] {
 background-position: -0px -280px
 }
 
-a[href|="/racistbarn"] {
+a[href|="/racistbarn"], a[href|="/disalot"], a[href|="/alotofdiscord"] {
 background-position: -70px -280px
 }
 
@@ -625,16 +685,28 @@ a[href|="/blt24"], a[href|="/rdchairfort"], a[href|="/derpshake"]{
 background-position: -140px -280px
 }
 
-a[href|="/fry"] {
+a[href|="/fry"], a[href|="/cadanceheart"] {
 background-position: -0px -350px
 }
 
-a[href|="/ihavenomouthandimustscream"] {
+a[href|="/ihavenomouthandimustscream"], a[href|="/berrytuber"] {
 background-position: -0px -420px
 }
 
-a[href|="/sovietsalute"] {
+a[href|="/coloncannon"] {
+background-position: -70px -420px
+}
+
+a[href|="/amgic"] {
+background-position: -0px -490px
+}
+
+a[href|="/itbegins"], a[href|="/thedrinkening"], a[href|="/sovietsalute"] {
 background-position: -0px -560px
+}
+
+a[href|="/heavybedroomeyes"] {
+background-position: -140px -560px
 }
 
 a[href|="/nomeansno"] {
