--- a/source-css/mylittlefortress.css
+++ b/source-css/mylittlefortress.css
@@ -35,13 +35,18 @@ div.titlebox span.number:after {
   content: " Howdy.";
 }
 
+/* BUTTONS */
+.nub { display: none; }
+.submit .morelink { background: #CDECE7; color: #66493B; }
+.submit .morelink:hover { background: #62778C; color: #675555; }
+
 /* Search bar spy */
 #search input[type="text"] { background: url(%%sharp-dresser%%) center left no-repeat !important; padding: 13px 2px 15px 45px; width: 250px;}
 
 /* Header */
 #header {
-    background-color: #252525;
-    background-image: url(%%bgnew%%);
+    background-color: #ade0b9;
+    background-image: url(%%newerBG%%);
     background-repeat:repeat-x;
     border-bottom: 1px solid #000;
     height: 147px;
@@ -218,7 +223,7 @@ a.author[href$="tuxisme"]:after {
 
 a.author[href$="Dr_Gordon_Voteman"] {visibility:hidden; font-size:0;}
 a.author[href$="Dr_Gordon_Voteman"]:after {
-    visibility:visible; font-size: 12px; color: #f37b21; content: url(%%lambda%%) "Dr. Gordon Voteman"
+    visibility:visible; font-size: 12px; color: #f37b21; content: "Dr. Gordon Voteman"
 }
 .sidecontentbox a.author[href$="/Dr_Gordon_Voteman"] {
     display: none
@@ -296,7 +301,55 @@ a.author[href$="damn-the-torpedoes"]:after {
 }
 
 /* FLAIR */
-.flair { display:inline-block; padding: 0;  background: transparent url(%%July2012b%%) no-repeat;  color: black;  border: 0;  border-radius: 0;  text-indent: -9999px; width: 25px;  height: 25px; }
+/* ORIGINAL */
+/*.flair { display:inline-block; padding: 0;  background: transparent url(%%July2012b%%) no-repeat;  color: black;  border: 0;  border-radius: 0;  text-indent: -9999px; width: 25px;  height: 25px; } */
+
+/********************* Begin Steam ID Flair  **********************/
+/*   please contact talkingwires before fiddling  with this bit   */
+
+.sidecontentbox span.flair {
+display: none
+}
+
+.flair {
+visibility: visible;
+text-indent: -9999px;
+/* hide the flair text */
+margin: 0px 3px 0px;
+width: 25px;
+height: 25px;
+display: -moz-inline-stack;
+display: inline-block;
+background-repeat: no-repeat;
+background-image: url(%%July2012b%%);
+border-width: 0;
+padding: 0;
+background-color: transparent; 
+}
+
+.flair-trusted, .flair-valuablemember{
+    background-position: 0px -25px;
+}
+
+/* Show the flair text on hover and hide the crest */
+.commentarea span.flair:hover, .link span.flair:hover {
+margin: 0px 3px 0px;
+visibility: visible;
+width: auto;
+height: 25px;
+line-height: 25px;
+padding: 0 1px;
+text-indent: 0;
+background-image: none;
+cursor: default;
+border-width: 1px;
+background-color: whitesmoke;
+color: black
+}
+     
+.tagline .flair {font-size: 9px;}
+
+/* MYLITTLEFLAIRTRESS */
 
 /* BLU */
 .flair-bdemo { background-position: 0px 0px;}
@@ -333,7 +386,7 @@ a.author[href$="damn-the-torpedoes"]:after {
 
 /* Additional Marks*/
 .flair-time { background-position: -75px 0px;}
-.flair-shadow { background-position: -75px -25px;}
+.flair-shadowbolts { background-position: -75px -25px;}
 .flair-spitfire { background-position: -75px -50px;}
 .flair-trixie { background-position: -75px -75px;}
 .flair-derpy { background-position: -75px -100px;}
@@ -382,6 +435,9 @@ a.author[href$="damn-the-torpedoes"]:after {
 .flair-bvinyl { background-position: -200px -50px;}
 .flair-bzecora { background-position: -200px -75px;}
 
+.flair-lambda {
+background: url(%%lambda%%) no-repeat !important;
+}
 
 
 /* EMOTICONS */
@@ -634,7 +690,7 @@ a[href="/freakout"]:hover:after {
     left: 158px;
     z-index: 50;
     margin: 20px 410px 0px 0px;
-    padding: 15px 10px 10px 75px;
+    padding: 15px 10px 10px 50px;
     list-style: none;
     display: block;
     white-space: normal;
